# algoritmica

./: .gitignore
practica1/: CMakeLists.txt  gnuplot.sh
practica1/src/: main.cc
practica1/src/determinanteIterativo/: determinanteIterativo.cc
practica1/src/heapSort/: heapSort.cc  heapSort.h
practica1/text/: prueba.txt
practica2/: CMakeLists.txt  gnuplot.sh
practica2/graficos/: exponenciacion.eps
practica2/src/: main.cc
practica2/src/funciones/: funciones.cc  funciones.h
practica2/text/: exponenciacion.txt  exponenciacionDyV.txt  exponenciacionDyVIterativo.txt
practica3/: CMakeLists.txt
practica3/src/: CMakeCache.txt  Makefile  cmake_install.cmake  test  test.cpp  traveling_salesman_greedy_algorithm.hpp
practica4/src/: test.cpp  traveling_salesman_dynamic_algorithm.hpp
practica5/: AndaluciaReal.txt
practica5/src/: graph_utils.hpp  medio_nivel.hpp  nReinas.hpp  test.cpp  traveling_backtracking_algorithm.hpp  traveling_salesman_greedy_algorithm.hpp
